Fix IntelliJ style warnings